# arigold

./: .env.example  .gcloudignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: basic_usage.py
scripts/: deploy.sh  test_function.sh
src/arigold/: __init__.py  agent.py  config.py  main.py
tests/: test_setup.py
